--- a/Vashchak/FilesCatalog/view/adminhtml/layout/vashchak_filescatalog_object_edit.xml
+++ b/Vashchak/FilesCatalog/view/adminhtml/layout/vashchak_filescatalog_object_edit.xml
@@ -4,7 +4,7 @@
   <update handle="editor"/>
   <body>
     <referenceContainer name="content">
-      <block class="Vashchak\FilesCatalog\Block\Adminhtml\Request\Edit" name="vashchak_request_edit"/>
+      <block class="Vashchak\FilesCatalog\Block\Adminhtml\Object\Edit" name="vashchak_object_edit"/>
     </referenceContainer>
   </body>
 </page>
