--- a/Vashchak/FilesCatalog/view/frontend/layout/filescatalog_category_index.xml
+++ b/Vashchak/FilesCatalog/view/frontend/layout/filescatalog_category_index.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
   <referenceContainer name="content">
-    <block class="Vashchak\FilesCatalog\Block\Index" name="filescatalog_index_index" template="Vashchak_FilesCatalog::index.phtml" />
+    <block class="Vashchak\FilesCatalog\Block\Category" name="filescatalog_category_index" template="Vashchak_FilesCatalog::category.phtml" />
   </referenceContainer>
 </page>
