--- a/Vashchak/FilesCatalog/view/adminhtml/layout/filescatalog_category_index.xml
+++ b/Vashchak/FilesCatalog/view/adminhtml/layout/filescatalog_category_index.xml
@@ -3,17 +3,17 @@
   <update handle="styles"/>
   <body>
     <referenceContainer name="content">
-      <block class="Vashchak\FilesCatalog\Block\Adminhtml\Object" name="vashchak_object_grid">
-        <block class="Magento\Backend\Block\Widget\Grid" name="vashchak_object_grid.grid" as="grid">
+      <block class="Vashchak\FilesCatalog\Block\Adminhtml\Category" name="vashchak_category_grid">
+        <block class="Magento\Backend\Block\Widget\Grid" name="vashchak_category_grid.grid" as="grid">
           <arguments>
             <argument name="id" xsi:type="string">entity_id</argument>
-            <argument name="dataSource" xsi:type="object">Vashchak\FilesCatalog\Model\ResourceModel\Object\Collection</argument>
+            <argument name="dataSource" xsi:type="object">Vashchak\FilesCatalog\Model\ResourceModel\Category\Collection</argument>
             <argument name="default_sort" xsi:type="string">id</argument>
             <argument name="default_dir" xsi:type="string">ASC</argument>
             <argument name="save_parameters_in_session" xsi:type="string">1</argument>
           </arguments>
 
-          <block class="Magento\Backend\Block\Widget\Grid\ColumnSet" name="vashchak_object_grid.grid.columnSet" as="grid.columnSet">
+          <block class="Magento\Backend\Block\Widget\Grid\ColumnSet" name="vashchak_category_grid.grid.columnSet" as="grid.columnSet">
             <arguments>
               <argument name="rowUrl" xsi:type="array">
                 <item name="path" xsi:type="string">*/*/edit</item>
@@ -31,16 +31,6 @@
                 <argument name="header_css_class" xsi:type="string">col-index</argument>
               </arguments>
             </block>
-            <block class="Magento\Backend\Block\Widget\Grid\Column" as="status">
-              <arguments>
-                <argument name="header" xsi:type="string" translate="true">Status</argument>
-                <argument name="index" xsi:type="string">status</argument>
-                <argument name="type" xsi:type="string">text</argument>
-                <argument name="renderer" xsi:type="string">Vashchak\FilesCatalog\Block\Grid\Renderer\Status</argument>
-                <argument name="column_css_class" xsi:type="string">col-id</argument>
-                <argument name="header_css_class" xsi:type="string">col-id</argument>
-              </arguments>
-            </block>
             <block class="Magento\Backend\Block\Widget\Grid\Column" as="title">
               <arguments>
                 <argument name="header" xsi:type="string" translate="true">Title</argument>
@@ -50,10 +40,10 @@
                 <argument name="header_css_class" xsi:type="string">col-id</argument>
               </arguments>
             </block>
-            <block class="Magento\Backend\Block\Widget\Grid\Column" as="description">
+            <block class="Magento\Backend\Block\Widget\Grid\Column" as="parent">
               <arguments>
-                <argument name="header" xsi:type="string" translate="true">Description</argument>
-                <argument name="index" xsi:type="string">description</argument>
+                <argument name="header" xsi:type="string" translate="true">Parent</argument>
+                <argument name="index" xsi:type="string">parent_id</argument>
                 <argument name="type" xsi:type="string">text</argument>
                 <argument name="column_css_class" xsi:type="string">col-id</argument>
                 <argument name="header_css_class" xsi:type="string">col-id</argument>
