--- a/Vashchak/FilesCatalog/view/adminhtml/layout/filescatalog_object_edit.xml
+++ b/Vashchak/FilesCatalog/view/adminhtml/layout/filescatalog_object_edit.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+      xsi:noNamespaceSchemaLocation="urn:magento:module:Magento_Ui:etc/ui_configuration.xsd">
+  <update handle="styles"/>
   <update handle="editor"/>
   <body>
     <referenceContainer name="content">
-      <block class="Vashchak\FilesCatalog\Block\Adminhtml\Object\Edit" name="vashchak_object_edit"/>
+      <uiComponent name="object_form"/>
     </referenceContainer>
   </body>
 </page>
